// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `<button />`;

exports[`Button renders correctly with custom children 1`] = `
<button
  className="max-w-96 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
  type="button"
>
  <button
    className="max-w-96 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
    type="button"
  >
    <div>
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 576 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
        />
      </svg>
    </div>
    <div
      className="text-md"
    >
      Click-Me
    </div>
  </button>
</button>
`;

exports[`Button renders correctly with default props 1`] = `
<button
  className="max-w-96 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
  type="button"
/>
`;

exports[`Button test_button_renders_with_custom_className_prop 1`] = `
<button
  className="custom-class"
/>
`;

exports[`Button test_button_renders_with_default_text 1`] = `
<button>
  Click-Me
</button>
`;

exports[`Button test_button_renders_with_disabled_prop 1`] = `
<button
  disabled={true}
/>
`;

exports[`Button test_button_renders_with_type_prop 1`] = `
<button
  type="submit"
/>
`;
